Movies and roxanne

--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,10 @@
 	-o-transform-style: preserve-3d;
 	-ms-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-	-webkit-background-size: 100% 100%;
-	-moz-background-size: 100% 100%;
-	background-size: 100% 100%;
-	background-position: center center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+	background-position: top center;
 	background-repeat: no-repeat;
 	background-color: #333;
 	-webkit-box-sizing: content-box;
