--- a/css/demo.css
+++ b/css/demo.css
@@ -1,6 +1,5 @@
 #ri-grid {
   transform: translateY(-100px);
-
 }
 
 .overlay {
@@ -16,6 +15,10 @@
   flex-direction: column;
 }
 
+.movies .overlay {
+  background: rgba(0,0,0,0.3);
+}
+
 .hackday {
   width: 80%;
 }
@@ -27,6 +30,22 @@
 
 .animated {
   animation-fill-mode: both;
+}
+
+.roxanne body {
+  width: 2000px;
+}
+
+.roxanne #ri-grid {
+  transform: translate(-50px, -100px);
+}
+
+.roxanne .overlay {
+  background: rgba(0,0,0,0.2);
+}
+
+.roxanne .hackday {
+  width: 50%;
 }
 
 @keyframes twister {
@@ -116,4 +135,326 @@
   z-index: 1000;
   animation-iteration-count: infinite;
   animation-delay: 13s;
+}
+
+@keyframes shakeit {
+  0% {
+    transform: translate(0px, 0) rotate(1deg);
+  }
+  1% {
+    transform: translate(-2px, 0) rotate(-1deg);
+  }
+  2% {
+    transform: translate(4px, 0) rotate(2deg);
+  }
+  3% {
+    transform: translate(-6px, 0) rotate(-3deg);
+  }
+  4% {
+    transform: translate(8px, 0) rotate(4deg);
+  }
+  5% {
+    transform: translate(-10px, 0) rotate(-5deg);
+  }
+  6% {
+    transform: translate(12px, 0) rotate(6deg);
+  }
+  7% {
+    transform: translate(-14px, 0) rotate(-7deg);
+  }
+  8% {
+    transform: translate(16px, 0) rotate(8deg);
+  }
+  9% {
+    transform: translate(-18px, 0) rotate(-9deg);
+  }
+  10% {
+    transform: translate(20px, 0) rotate(8deg);
+  }
+  11% {
+    transform: translate(-22px, 0) rotate(-8deg);
+  }
+  12% {
+    transform: translate(24px, 0) rotate(8deg);
+  }
+  13% {
+    transform: translate(-26px, 0) rotate(-8deg);
+  }
+  14% {
+    transform: translate(28px, 0) rotate(8deg);
+  }
+  15% {
+    transform: translate(-30px, 0) rotate(-8deg);
+  }
+  16% {
+    transform: translate(32px, 0) rotate(8deg);
+  }
+  17% {
+    transform: translate(-34px, 0) rotate(-8deg);
+  }
+  18% {
+    transform: translate(36px, 0) rotate(8deg);
+  }
+  19% {
+    transform: translate(-38px, 0) rotate(-8deg);
+  }
+  20% {
+    transform: translate(40px, 0) rotate(8deg);
+  }
+  21% {
+    transform: translate(-42px, 0) rotate(-8deg);
+  }
+  22% {
+    transform: translate(44px, 0) rotate(8deg);
+  }
+  23% {
+    transform: translate(-46px, 0) rotate(-8deg);
+  }
+  24% {
+    transform: translate(48px, 0) rotate(8deg);
+  }
+  25% {
+    transform: translate(-50px, 0) rotate(-8deg);
+  }
+  26% {
+    transform: translate(52px, 0) rotate(8deg);
+  }
+  27% {
+    transform: translate(-54px, 0) rotate(-8deg);
+  }
+  28% {
+    transform: translate(56px, 0) rotate(8deg);
+  }
+  29% {
+    transform: translate(-58px, 0) rotate(-8deg);
+  }
+  30% {
+    transform: translate(60px, 0) rotate(8deg);
+  }
+  31% {
+    transform: translate(-62px, 0) rotate(-8deg);
+  }
+  32% {
+    transform: translate(64px, 0) rotate(8deg);
+  }
+  33% {
+    transform: translate(-66px, 0) rotate(-8deg);
+  }
+  34% {
+    transform: translate(68px, 0) rotate(8deg);
+  }
+  35% {
+    transform: translate(-70px, 0) rotate(-8deg);
+  }
+  36% {
+    transform: translate(72px, 0) rotate(8deg);
+  }
+  37% {
+    transform: translate(-74px, 0) rotate(-8deg);
+  }
+  38% {
+    transform: translate(76px, 0) rotate(8deg);
+  }
+  39% {
+    transform: translate(-78px, 0) rotate(-8deg);
+  }
+  40% {
+    transform: translate(80px, 0) rotate(8deg);
+  }
+  41% {
+    transform: translate(-82px, 0) rotate(-8deg);
+  }
+  42% {
+    transform: translate(84px, 0) rotate(8deg);
+  }
+  43% {
+    transform: translate(-86px, 0) rotate(-8deg);
+  }
+  44% {
+    transform: translate(88px, 0) rotate(8deg);
+  }
+  45% {
+    transform: translate(-90px, 0) rotate(-8deg);
+  }
+  46% {
+    transform: translate(92px, 0) rotate(8deg);
+  }
+  47% {
+    transform: translate(-94px, 0) rotate(-8deg);
+  }
+  48% {
+    transform: translate(96px, 0) rotate(8deg);
+  }
+  49% {
+    transform: translate(-98px, 0) rotate(-8deg);
+  }
+  50% {
+    transform: translate(100px, 0) rotate(8deg);
+  }
+  51% {
+    transform: translate(-102px, 0) rotate(-8deg);
+  }
+  52% {
+    transform: translate(104px, 0) rotate(8deg);
+  }
+  53% {
+    transform: translate(-106px, 0) rotate(-8deg);
+  }
+  54% {
+    transform: translate(108px, 0) rotate(8deg);
+  }
+  55% {
+    transform: translate(-110px, 0) rotate(-8deg);
+  }
+  56% {
+    transform: translate(112px, 0) rotate(8deg);
+  }
+  57% {
+    transform: translate(-114px, 0) rotate(-8deg);
+  }
+  58% {
+    transform: translate(116px, 0) rotate(8deg);
+  }
+  59% {
+    transform: translate(-118px, 0) rotate(-8deg);
+  }
+  60% {
+    transform: translate(120px, 0) rotate(8deg);
+  }
+  61% {
+    transform: translate(-122px, 0) rotate(-8deg);
+  }
+  62% {
+    transform: translate(124px, 0) rotate(8deg);
+  }
+  63% {
+    transform: translate(-126px, 0) rotate(-8deg);
+  }
+  64% {
+    transform: translate(128px, 0) rotate(8deg);
+  }
+  65% {
+    transform: translate(-130px, 0) rotate(-8deg);
+  }
+  66% {
+    transform: translate(132px, 0) rotate(8deg);
+  }
+  67% {
+    transform: translate(-134px, 0) rotate(-8deg);
+  }
+  68% {
+    transform: translate(136px, 0) rotate(8deg);
+  }
+  69% {
+    transform: translate(-138px, 0) rotate(-8deg);
+  }
+  70% {
+    transform: translate(140px, 0) rotate(8deg);
+  }
+  71% {
+    transform: translate(-142px, 0) rotate(-8deg);
+  }
+  72% {
+    transform: translate(144px, 0) rotate(8deg);
+  }
+  73% {
+    transform: translate(-146px, 0) rotate(-8deg);
+  }
+  74% {
+    transform: translate(148px, 0) rotate(8deg);
+  }
+  75% {
+    transform: translate(-150px, 0) rotate(-8deg);
+  }
+  76% {
+    transform: translate(152px, 0) rotate(8deg);
+  }
+  77% {
+    transform: translate(-154px, 0) rotate(-8deg);
+  }
+  78% {
+    transform: translate(156px, 0) rotate(8deg);
+  }
+  79% {
+    transform: translate(-158px, 0) rotate(-8deg);
+  }
+  80% {
+    transform: translate(150px, 0) rotate(8deg);
+  }
+  81% {
+    transform: translate(-140px, 0) rotate(-8deg);
+  }
+  82% {
+    transform: translate(130px, 0) rotate(8deg);
+  }
+  83% {
+    transform: translate(-120px, 0) rotate(-8deg);
+  }
+  84% {
+    transform: translate(110px, 0) rotate(8deg);
+  }
+  85% {
+    transform: translate(-100px, 0) rotate(-8deg);
+  }
+  86% {
+    transform: translate(90px, 0) rotate(8deg);
+  }
+  87% {
+    transform: translate(-80px, 0) rotate(-8deg);
+  }
+  88% {
+    transform: translate(75px, 0) rotate(8deg);
+  }
+  89% {
+    transform: translate(-70px, 0) rotate(-8deg);
+  }
+  90% {
+    transform: translate(60px, 0) rotate(6deg);
+  }
+  91% {
+    transform: translate(-55px, 0) rotate(-6deg);
+  }
+  92% {
+    transform: translate(50px, 0) rotate(6deg);
+  }
+  93% {
+    transform: translate(-45px, 0) rotate(-6deg);
+  }
+  94% {
+    transform: translate(40px, 0) rotate(4deg);
+  }
+  95% {
+    transform: translate(-35px, 0) rotate(-4deg);
+  }
+  96% {
+    transform: translate(30px, 0) rotate(4deg);
+  }
+  97% {
+    transform: translate(-20px, 0) rotate(-4deg);
+  }
+  98% {
+    transform: translate(10px, 0) rotate(2deg);
+  }
+  99% {
+    transform: translate(-5px, 0) rotate(-2deg);
+  }
+  100% {
+    transform: translate(2px, 0) rotate(2deg);
+  }
+}
+
+.shakeit {
+  animation-timing-function: ease-in;
+  transform-origin: bottom center;
+  animation-name: shakeit;
+  animation-duration: 120s;
+  animation-iteration-count: infinite;
+}
+
+.shakeit2 {
+  animation-delay: 20s;
+}
+
+.shakeit3 {
+  animation-delay: 40s;
 }
