--- a/css/demo.css
+++ b/css/demo.css
@@ -12,7 +12,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(255,255,255,0.7);
+  background: rgba(255,255,255,0.1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +20,7 @@ body {
 }
 
 .movies .overlay {
-  background: rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.1);
 }
 
 .hackday {
@@ -60,7 +60,7 @@ body {
   background: #99ccee;
 }
 
-.roxanne a {
+a {
   background-color: #99ccee !important;
   background-blend-mode: soft-light;
 }
