--- a/css/demo.css
+++ b/css/demo.css
@@ -52,6 +52,10 @@ body {
   transform: rotate(-90deg) translateY(200px);
 }
 
+.smgames .overlay {
+  transform: none;
+}
+
 .games .hackday {
   width: 50%;
 }
